samples/_failures_safe/1761256832_836825_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c414a07b.c:156: error: expected ‘;’, ‘,’ or ‘)’ at end of input
